src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-4xl;
  }
  h2 {
    @apply text-3xl;
  }

  h3 {
    @apply text-lg;
  }

  p {
    @apply text-body-color;
  }

  input:focus-visible,
  button:focus-visible,
  a:focus-visible {
    @apply rounded-lg ring-2 ring-offset-2;
  }
}

@font-face {
  font-family: Poppins;
  src: url("./assets/fonts/Poppins-Regular.ttf");
}

@font-face {
  font-family: Poppins-Bold;
  src: url("./assets/fonts/Poppins-Bold.ttf");
}

:root {
  font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#app {
  min-height: 100vh; /* The Fallback */
  min-height: 100dvh;
}

h1,
h2,
h3 {
  font-family: Poppins-Bold;
}

input,
button,
a {
  outline: 0;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  -webkit-appearance: none;
}

